# COP209-IITD

./: .gitignore  Gemfile  README.md
.github/workflows/: ci.yml
Assignment-1/: CMakeLists.txt  README.md  run.sh
Assignment-1/include/: common.h
Assignment-1/src/: common.c  hare-and-turtle.c
Assignment-1/src/ipc/: fifo.c  message-queue.c  pipe.c
Assignment-1/tests/: run-test.sh
